--- a/demo/expand health/v2/views/client-edit.html
+++ b/demo/expand health/v2/views/client-edit.html
@@ -205,7 +205,7 @@
 
                 <div class="form-group">
                   <label for="phone">Phone</label>
-                  <input type="tel" id="phone" name="phone" class="form-input" placeholder="(555) 123-4567">
+                  <input type="tel" id="phone" name="phone" class="form-input" placeholder="+44 7911 123456">
                 </div>
 
                 <div class="form-group">
