--- a/demo/expand health/v2/views/lab-upload.html
+++ b/demo/expand health/v2/views/lab-upload.html
@@ -15,7 +15,7 @@
     <aside class="sidebar">
       <div class="sidebar-header">
         <div class="logo-small">
-          <span class="logo-icon">âœ¦</span>
+          <span class="logo-icon">✦</span>
           <span class="logo-text">ExpandHealth</span>
         </div>
       </div>
